feat: Add uploading to s3

--- a/create-custom-dataset/CustomDataset.ipynb
+++ b/create-custom-dataset/CustomDataset.ipynb
@@ -112,8 +112,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('gsm8k.jsonl', 'w') as f:\n",
+    "prompt_file_name = 'gsm8k.jsonl'\n",
+    "\n",
+    "with open(prompt_file_name, 'w') as f:\n",
     "    f.writelines([to_prompt_json_line(row) for row in rows])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8915b58-d22b-41e6-a522-91665992e81c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "\n",
+    "BUCKET_NAME = \"CHANGE TO YOUR BUCKET NAME\"\n",
+    "\n",
+    "s3_client = boto3.client('s3')\n",
+    "s3_client.upload_file(prompt_file_name, BUCKET_NAME, f'datasets/{prompt_file_name}')"
    ]
   }
  ],
@@ -133,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
