--- a/create-custom-dataset/CustomDataset.ipynb
+++ b/create-custom-dataset/CustomDataset.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Prepare Custom Dataset\n",
     "\n",
-    "This notebook will generate a Bedrock Evaluations compatible jsonl file for an evaluation job using [GSM8K](https://github.com/openai/grade-school-math) dataset"
+    "This notebook will generate a Bedrock Evaluations compatible jsonl file for an evaluation job using [CNN/DailyMail](https://huggingface.co/datasets/abisee/cnn_dailymail) dataset"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "40d394f6-76fe-4f40-9ff8-c44dfd8172ea",
    "metadata": {},
    "source": [
-    "## Get GSM8K Dataset"
+    "## Get CNN/DailyMail Dataset"
    ]
   },
   {
@@ -25,35 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from urllib.request import urlretrieve\n",
+    "from datasets import load_dataset\n",
     "\n",
-    "raw_file_name = 'train.jsonl'\n",
-    "\n",
-    "urlretrieve('https://raw.githubusercontent.com/openai/grade-school-math/refs/heads/master/grade_school_math/data/train.jsonl', raw_file_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6fec1fb3-91b0-47d4-b07c-52ab2717503d",
-   "metadata": {},
-   "source": [
-    "## Read the first 1000 lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aca72247-656e-4af1-b26d-664f4359f70e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "rows = []\n",
-    "\n",
-    "with open(raw_file_name, 'r') as f:\n",
-    "    for _ in range(1000):\n",
-    "        rows.append(json.loads(f.readline()))"
+    "dataset = load_dataset(\"abisee/cnn_dailymail\", \"3.0.0\")"
    ]
   },
   {
@@ -72,29 +46,28 @@
    "outputs": [],
    "source": [
     "from pprint import pprint\n",
+    "import json\n",
     "\n",
-    "prompt_template = \"\"\"Solve the following math problem.\n",
+    "prompt_template = instruction='''Summarize the news article provided below. Do not provide anything other than a clean summarization in couple sentences.\n",
     "\n",
-    "{}\n",
-    "\n",
-    "Respond by only providing an answer to the question\"\"\"\n",
+    "Article: {}\n",
+    "'''\n",
     "\n",
     "def to_prompt_json(obj):\n",
-    "    quesiton = obj.get('question')\n",
-    "    answer = obj.get('answer')\n",
-    "    answer_pos = answer.find('####') + 4\n",
-    "    arith_answer = answer[answer_pos:]\n",
+    "    article = obj['article']\n",
+    "    highlight = obj.get('highlights')\n",
     "\n",
     "    return {\n",
-    "        'prompt': prompt_template.format(quesiton),\n",
-    "        'referenceResponse': arith_answer.strip(),\n",
+    "        'prompt': prompt_template.format(article),\n",
+    "        'referenceResponse': highlight,\n",
     "    }\n",
     "\n",
     "def to_prompt_json_line(obj):\n",
     "    return json.dumps(to_prompt_json(obj)) + '\\n'\n",
     "\n",
+    "\n",
     "print('### Prompt looks like this ###\\n')\n",
-    "pprint(to_prompt_json(rows[0]))"
+    "pprint(to_prompt_json(dataset['train'][0]))"
    ]
   },
   {
@@ -112,22 +85,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_file_name = 'gsm8k.jsonl'\n",
+    "import random\n",
+    "\n",
+    "# Randomly select 1000 prompts\n",
+    "indices = [random.randint(0, len(dataset['train'])) for _ in range(1000)]\n",
+    "\n",
+    "train_set = dataset['train']\n",
+    "prompt_file_name = 'cnn_dailymail.jsonl'\n",
     "\n",
     "with open(prompt_file_name, 'w') as f:\n",
-    "    f.writelines([to_prompt_json_line(row) for row in rows])"
+    "    f.writelines([to_prompt_json_line(train_set[i]) for i in indices])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db77078d-64a9-4e12-ab08-44a32c63ef81",
+   "metadata": {},
+   "source": [
+    "## Upload Data to S3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8915b58-d22b-41e6-a522-91665992e81c",
+   "id": "1ff26aa1-fb63-47eb-9054-4ce51ee95110",
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3\n",
     "\n",
-    "BUCKET_NAME = \"CHANGE TO YOUR BUCKET NAME\"\n",
+    "BUCKET_NAME = \"bedrock-evaluation-YOUR BUCKET NAME\"\n",
     "\n",
     "s3_client = boto3.client('s3')\n",
     "s3_client.upload_file(prompt_file_name, BUCKET_NAME, f'datasets/{prompt_file_name}')"
@@ -150,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
