feat: Search dataset bucket automatically

--- a/create-custom-dataset/CustomDataset.ipynb
+++ b/create-custom-dataset/CustomDataset.ipynb
@@ -12,10 +12,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ff0e590-700a-41fc-815c-da4a61857d84",
+   "metadata": {},
+   "source": [
+    "## Install dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1917e4d3-85aa-4965-9689-517e8c6ff9be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40d394f6-76fe-4f40-9ff8-c44dfd8172ea",
    "metadata": {},
    "source": [
-    "## Get CNN/DailyMail Dataset"
+    "## Get CNN/DailyMail Dataset\n",
+    "\n",
+    "Restart the kernel if the command fails"
    ]
   },
   {
@@ -27,7 +47,9 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "dataset = load_dataset(\"abisee/cnn_dailymail\", \"3.0.0\")"
+    "dataset = load_dataset(\"abisee/cnn_dailymail\", \"3.0.0\")\n",
+    "train_set = dataset['train']\n",
+    "test_set = dataset['test']"
    ]
   },
   {
@@ -47,6 +69,7 @@
    "source": [
     "from pprint import pprint\n",
     "import json\n",
+    "import random\n",
     "\n",
     "prompt_template = instruction='''Summarize the news article provided below. Do not provide anything other than a clean summarization in couple sentences.\n",
     "\n",
@@ -67,7 +90,7 @@
     "\n",
     "\n",
     "print('### Prompt looks like this ###\\n')\n",
-    "pprint(to_prompt_json(dataset['train'][0]))"
+    "pprint(to_prompt_json(train_set[random.randint(0, len(train_set))]))"
    ]
   },
   {
@@ -88,9 +111,8 @@
     "import random\n",
     "\n",
     "# Randomly select 1000 prompts\n",
-    "indices = [random.randint(0, len(dataset['train'])) for _ in range(1000)]\n",
+    "indices = [random.randint(0, len(train_set)) for _ in range(1000)]\n",
     "\n",
-    "train_set = dataset['train']\n",
     "prompt_file_name = 'cnn_dailymail.jsonl'\n",
     "\n",
     "with open(prompt_file_name, 'w') as f:\n",
@@ -114,10 +136,17 @@
    "source": [
     "import boto3\n",
     "\n",
-    "BUCKET_NAME = \"bedrock-evaluation-YOUR BUCKET NAME\"\n",
+    "sts_client = boto3.client('sts')\n",
+    "account_info = sts_client.get_caller_identity()\n",
+    "account_id = account_info['Account']\n",
+    "\n",
+    "bucket_name = f\"bedrock-evaluation-{account_id}\"\n",
     "\n",
     "s3_client = boto3.client('s3')\n",
-    "s3_client.upload_file(prompt_file_name, BUCKET_NAME, f'datasets/{prompt_file_name}')"
+    "\n",
+    "object_key = f'datasets/{prompt_file_name}'\n",
+    "print(f'## Uploading {prompt_file_name} to s3://{bucket_name}/{object_key}')\n",
+    "s3_client.upload_file(prompt_file_name, bucket_name, object_key)"
    ]
   }
  ],
@@ -137,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
