feat: Add byoi notebook

--- a/create-custom-dataset/BringYourOwnInference.ipynb
+++ b/create-custom-dataset/BringYourOwnInference.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a35b7a67-0a0f-4123-8486-f11bbc8ff656",
+   "id": "f08c69dc-a3bf-48b3-9362-869ab7d2ae68",
    "metadata": {},
    "source": [
-    "# Prepare Custom Dataset\n",
+    "# Prepare BYOIDataset\n",
     "\n",
     "This notebook will generate a Bedrock Evaluations compatible jsonl file for an evaluation job using [CNN/DailyMail](https://huggingface.co/datasets/abisee/cnn_dailymail) dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ff0e590-700a-41fc-815c-da4a61857d84",
+   "id": "ab87ca91-c2a9-4f78-93cc-844c72802fca",
    "metadata": {},
    "source": [
     "## Install dependencies"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1917e4d3-85aa-4965-9689-517e8c6ff9be",
+   "id": "90a58d86-d7f6-447d-b026-e17cc732ec66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d394f6-76fe-4f40-9ff8-c44dfd8172ea",
+   "id": "722ecdfc-7f07-45e3-b215-7ea1e4ab252d",
    "metadata": {},
    "source": [
     "## Get CNN/DailyMail Dataset\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "426423e9-a9a5-4996-aece-d98b2fe9170a",
+   "id": "13094f07-e630-437e-8ba2-cdd6a647681c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91db858a-703a-48bc-bbd7-93b0bbb53283",
+   "id": "e9154910-c1f9-4707-bbd3-6cc58a692a97",
+   "metadata": {},
+   "source": [
+    "## Create Dummy Summarizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4108fb8a-ad87-40cb-8cf1-5d32cd837524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class DummySummarizer:\n",
+    "    def __init__(self, num_tokens: int):\n",
+    "        self.num_tokens = num_tokens\n",
+    "    \n",
+    "    def __call__(self, text: str) -> str:\n",
+    "        \"\"\"Summarize the input text by randomly selecting words\n",
+    "        \n",
+    "        Args:\n",
+    "            text (str): Input text to summarize\n",
+    "            \n",
+    "        Returns:\n",
+    "            str: Summarized text with approximately num_tokens words\n",
+    "        \"\"\"\n",
+    "        if not text or not text.strip():\n",
+    "            return \"\"\n",
+    "            \n",
+    "        # Split text into words\n",
+    "        words = text.split()\n",
+    "        \n",
+    "        # If num_tokens is greater than available words, return full text\n",
+    "        if self.num_tokens >= len(words):\n",
+    "            return text\n",
+    "            \n",
+    "        # Create list of indices and randomly select num_tokens of them\n",
+    "        indices = list(range(len(words)))\n",
+    "        selected_indices = sorted(random.sample(indices, self.num_tokens))\n",
+    "        \n",
+    "        # Build summary using selected indices to maintain word order\n",
+    "        summary_words = [words[i] for i in selected_indices]\n",
+    "        \n",
+    "        return \" \".join(summary_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6641c7ed-d593-492d-8403-4b53897b25d2",
    "metadata": {},
    "source": [
     "## Generate Prompt Dataset"
@@ -63,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc8c4ef-aa75-42a3-9d5c-4a215f6cc428",
+   "id": "73286b47-6f29-48d9-b91a-a4eda3083204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,52 +126,62 @@
     "Article: {}\n",
     "'''\n",
     "\n",
-    "def to_prompt_json(obj):\n",
+    "def to_prompt_json(obj, summarizer):\n",
     "    article = obj['article']\n",
     "    highlight = obj.get('highlights')\n",
     "\n",
     "    return {\n",
     "        'prompt': prompt_template.format(article),\n",
     "        'referenceResponse': highlight,\n",
+    "        'modelResponses': {\n",
+    "            'modelIdentifier': 'dummy',\n",
+    "            'response': summarizer(article),\n",
+    "        },\n",
     "    }\n",
     "\n",
-    "def to_prompt_json_line(obj):\n",
-    "    return json.dumps(to_prompt_json(obj)) + '\\n'\n",
-    "\n",
-    "\n",
-    "print('### Prompt looks like this ###\\n')\n",
-    "pprint(to_prompt_json(train_set[random.randint(0, len(train_set))]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5be8541-e9f3-4b72-adf6-326740606899",
-   "metadata": {},
-   "source": [
-    "## Save the Prompt Dataset"
+    "def to_prompt_json_line(obj, summarizer):\n",
+    "    return json.dumps(to_prompt_json(obj, summarizer)) + '\\n'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1a807b2-45f7-497d-a2b0-9ef5cd9b63f0",
+   "id": "e123030f-8dcb-441a-b203-bf10c2dd62d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
+    "prompt_file_name = 'cnn_dailymail_byoi.jsonl'\n",
+    "\n",
     "# Randomly select 10 prompts\n",
     "indices = [random.randint(0, len(train_set)) for _ in range(10)]\n",
     "\n",
-    "prompt_file_name = 'cnn_dailymail.jsonl'\n",
+    "summarizer = DummySummarizer(100)\n",
     "\n",
     "with open(prompt_file_name, 'w') as f:\n",
-    "    f.writelines([to_prompt_json_line(train_set[i]) for i in indices])"
+    "    f.writelines([to_prompt_json_line(train_set[i], summarizer) for i in indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3c3897b-5576-4d35-8522-52abfc3f6328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "print('### Example Prompt Json looks like this ###')\n",
+    "\n",
+    "with open(prompt_file_name, 'r') as f:\n",
+    "    s = f.readline()\n",
+    "    pprint(json.loads(s))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db77078d-64a9-4e12-ab08-44a32c63ef81",
+   "id": "0fa87937-650b-4f53-b415-4d69f9da36a1",
    "metadata": {},
    "source": [
     "## Upload Data to S3"
@@ -130,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff26aa1-fb63-47eb-9054-4ce51ee95110",
+   "id": "6b714975-5f2d-400c-81f7-b84e1bc08e9d",
    "metadata": {},
    "outputs": [],
    "source": [
