refactor: Change structure

--- a/bring-your-own-inference/BringYourOwnInference.ipynb
+++ b/bring-your-own-inference/BringYourOwnInference.ipynb
@@ -133,10 +133,12 @@
     "    return {\n",
     "        'prompt': prompt_template.format(article),\n",
     "        'referenceResponse': highlight,\n",
-    "        'modelResponses': {\n",
-    "            'modelIdentifier': 'dummy',\n",
-    "            'response': summarizer(article),\n",
-    "        },\n",
+    "        'modelResponses': [\n",
+    "            {\n",
+    "                'modelIdentifier': 'dummy',\n",
+    "                'response': summarizer(article),\n",
+    "            },\n",
+    "        ],\n",
     "    }\n",
     "\n",
     "def to_prompt_json_line(obj, summarizer):\n",
