refactor: Update notebook comments

--- a/custom-model-evaluation/PerpareDataset.ipynb
+++ b/custom-model-evaluation/PerpareDataset.ipynb
@@ -148,16 +148,9 @@
     "\n",
     "object_key = f'datasets/{prompt_file_name}'\n",
     "print(f'## Uploading {prompt_file_name} to s3://{bucket_name}/{object_key}')\n",
-    "s3_client.upload_file(prompt_file_name, bucket_name, object_key)"
+    "s3_client.upload_file(prompt_file_name, bucket_name, object_key)\n",
+    "print('Upload Complete')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a256ee11-c616-4fe8-becc-b2652a2190ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
